# ip-notifier

./: .gitignore  CMakeLists.txt  README.md  checker.go  config.go  go.mod  go.sum  gui.py  main.go  notifier.go
.github/workflows/: build.yml  package.yml
src/: checker.cpp  checker.h  config.cpp  config.h  gui.h  gui_linux.cpp  gui_macos.mm  gui_win32.cpp  main.cpp  notifier.cpp  notifier.h  tray.h  tray_linux.cpp  tray_macos.mm  tray_win32.cpp
